# elm-with-warp

./: .gitignore  README.md  elm-with-warp.cabal  elm.json  stack.yaml
app/: DevelMain.hs  GenerateElm.hs  Main.hs
elm-src/: Main.elm
src/: CodeGen.hs  Lib.hs  Type.hs
